--- a/src/QueryTest/QueryTest.csproj
+++ b/src/QueryTest/QueryTest.csproj
@@ -8,6 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="ErrorList.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ExcelDataReader" Version="3.7.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PersonnelInfo.Infrastructure\PersonnelInfo.Infrastructure.csproj" />
   </ItemGroup>
 
