--- a/src/QueryTest/Test.csproj
+++ b/src/QueryTest/Test.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PersonnelInfo.Infrastructure\PersonnelInfo.Infrastructure.csproj" />
+    <ProjectReference Include="..\PersonnelInfo.UIs\PersonnelInfo.Razor\PersonnelInfo.Razor.csproj" />
   </ItemGroup>
 
 </Project>
