--- a/src/PersonnelInfo.API/PersonnelInfo.API.csproj
+++ b/src/PersonnelInfo.API/PersonnelInfo.API.csproj
@@ -14,14 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Remove="Infrastructure\ErrorList.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="Infrastructure\ErrorList.json" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
@@ -34,6 +26,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PersonnelInfo.Infrastructure\PersonnelInfo.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
   </ItemGroup>
 
 </Project>
